--- a/content/docs/pt/error-handling.mdx
+++ b/content/docs/pt/error-handling.mdx
@@ -1021,7 +1021,7 @@ applyDecorators(app, [UserController]);
 // Error handler (por último!)
 app.use(errorHandler);
 
-await app.listen(3000);
+await app.listen();
 ```
 
 ## Melhores Práticas ✨
