--- a/content/docs/pt/index.mdx
+++ b/content/docs/pt/index.mdx
@@ -90,7 +90,7 @@ const app = new AzuraClient();
 applyDecorators(app, [UserController]);
 
 // Inicia o servidor
-await app.listen(3000);
+await app.listen();
 console.log("🚀 API rodando em http://localhost:3000");
 ```
 
