--- a/content/docs/pt/javascript-usage.mdx
+++ b/content/docs/pt/javascript-usage.mdx
@@ -68,7 +68,7 @@ app.get("/", ({ req, res }) => {
   res.json({ message: "Olá do JavaScript!" });
 });
 
-app.listen();
+await app.listen();
 ```
 
 ### 4. Executar
