--- a/content/docs/en/index.mdx
+++ b/content/docs/en/index.mdx
@@ -90,7 +90,7 @@ const app = new AzuraClient();
 applyDecorators(app, [UserController]);
 
 // Start the server
-await app.listen(3000);
+await app.listen();
 console.log("🚀 API running at http://localhost:3000");
 ```
 
