--- a/content/docs/pt/routing.mdx
+++ b/content/docs/pt/routing.mdx
@@ -684,7 +684,7 @@ const app = new AzuraClient();
 applyDecorators(app, [UserController]);
 
 // Iniciar servidor
-await app.listen(3000);
+await app.listen();
 
 // Testar endpoints
 const response = await fetch("http://localhost:3000/api/users/123");
@@ -1195,12 +1195,11 @@ app.use(({ req, res, next }) => {
 
 applyDecorators(app, [UserController, PostController]);
 
-app.listen(3000, () => {
-  console.log('Servidor iniciado');
-  console.log('Testar rotas:');
-  console.log('- GET http://localhost:3000/api/users');
-  console.log('- GET http://localhost:3000/api/users/123');
-});
+await app.listen();
+console.log('Servidor iniciado');
+console.log('Testar rotas:');
+console.log('- GET http://localhost:3000/api/users');
+console.log('- GET http://localhost:3000/api/users/123');
 ```
 
 ## Próximos Passos 📖
